--- a/Interpreters/PythonInterpreter.Tests/MonoGame.QuakeConsole.PythonInterpreter.Tests.DesktopGL.csproj
+++ b/Interpreters/PythonInterpreter.Tests/MonoGame.QuakeConsole.PythonInterpreter.Tests.DesktopGL.csproj
@@ -1,80 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7A3615B7-2F7B-46CA-987E-88DC71FD815A}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuakeConsole.Tests</RootNamespace>
-    <AssemblyName>MonoGame.QuakeConsole.PythonInterpreter.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.6.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="AccessorAutocompletionTests.cs" />
-    <Compile Include="MethodAutocompletionTests.cs" />
-    <Compile Include="Utilities\TestsBase.cs" />
-    <Compile Include="OverwriteInputAutocompletionTests.cs" />
-    <Compile Include="AssignmentAutocompletionTests.cs" />
-    <Compile Include="ArrayAutocompletionTests.cs" />
-    <Compile Include="GeneralAutocompletionTests.cs" />
-    <Compile Include="Utilities\DummyObjects.cs" />
-    <Compile Include="Utilities\FakeInputBuffer.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.DesktopGL.csproj" />
+    <ProjectReference Include="..\PythonInterpreter\MonoGame.QuakeConsole.PythonInterpreter.DesktopGL.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.DesktopGL.csproj">
-      <Project>{98F182D3-4B53-4F26-A72C-588471AFDC49}</Project>
-      <Name>MonoGame.QuakeConsole.DesktopGL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PythonInterpreter\MonoGame.QuakeConsole.PythonInterpreter.DesktopGL.csproj">
-      <Project>{E012A443-B6EC-47AE-836E-BDC76D1CF4AC}</Project>
-      <Name>MonoGame.QuakeConsole.PythonInterpreter.DesktopGL</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
