removed AssemblyInfo and unsafe code tag. Moved GL project to netstandard2

--- a/Samples/HelloPython/HelloPython.DesktopGL.csproj
+++ b/Samples/HelloPython/HelloPython.DesktopGL.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
