--- a/Interpreters/PythonInterpreter.Tests/MonoGame.QuakeConsole.PythonInterpreter.Tests.DesktopGL.csproj
+++ b/Interpreters/PythonInterpreter.Tests/MonoGame.QuakeConsole.PythonInterpreter.Tests.DesktopGL.csproj
@@ -7,10 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.DesktopGL.csproj" />
     <ProjectReference Include="..\PythonInterpreter\MonoGame.QuakeConsole.PythonInterpreter.DesktopGL.csproj" />
   </ItemGroup>
+
 </Project>
