--- a/Samples/HelloPython/HelloPython.DesktopGL.csproj
+++ b/Samples/HelloPython/HelloPython.DesktopGL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IronPython" Version="2.7.10" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
   </ItemGroup>
@@ -14,6 +15,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Interpreters\PythonInterpreter\MonoGame.QuakeConsole.PythonInterpreter.DesktopGL.csproj" />
     <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.DesktopGL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <MonoGameContentReference Include="Content\Content.DesktopGL.mgcb" />
   </ItemGroup>
 
 </Project>
