Generate XML docs on build

--- a/Source/MonoGame.QuakeConsole.WindowsDX.csproj
+++ b/Source/MonoGame.QuakeConsole.WindowsDX.csproj
@@ -4,6 +4,7 @@
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DefineConstants>WINDOWSDX</DefineConstants>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
