--- a/Samples/HelloPython/HelloPython.WindowsDX.csproj
+++ b/Samples/HelloPython/HelloPython.WindowsDX.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
