--- a/Source/MonoGame.QuakeConsole.DesktopGL.csproj
+++ b/Source/MonoGame.QuakeConsole.DesktopGL.csproj
@@ -4,6 +4,13 @@
     <OutputType>Library</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageId>MonoGame.QuakeConsole.DesktopGL</PackageId>
+    <Title>Quake-style Console for MonoGame</Title>
+    <Version>2.0.0-pre</Version>
+    <Authors>Jaanus Varus</Authors>
+    <Description>Quake-style console allowing for in-game user input.</Description>
+    <PackageTags>monogame console shell terminal</PackageTags>
+    <RepositoryUrl>https://github.com/discosultan/quake-console</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
