--- a/Source/MonoGame.QuakeConsole.WindowsDX.csproj
+++ b/Source/MonoGame.QuakeConsole.WindowsDX.csproj
@@ -7,7 +7,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>MonoGame.QuakeConsole.WindowsDX</PackageId>
     <Title>Quake-style Console for MonoGame</Title>
-    <Version>2.0.0-pre</Version>
+    <Version>2.0.0</Version>
     <Authors>Jaanus Varus</Authors>
     <Description>Quake-style console allowing for in-game user input.</Description>
     <PackageTags>monogame console shell terminal</PackageTags>
